docs: add API documentation and improve CLI/security docs
- Add comprehensive API.md documenting all 5 MCP tools:
  - get_spec: Language specifications and documentation
  - get_linter_rule: Linter rule explanations
  - search_specs: Cross-language search
  - list_available: Spec discovery
  - get_checklist: Best practices checklists
- Document all supported languages (35) and categories (5)
- Add environment variable reference
- Document MCP resource URI format

CLI improvements:
- Add proper --help/-h handling to fetch.py
- Show current environment variable values in help

Security:
- Document known MCP SDK ReDoS vulnerability (upstream)
- Link to GitHub advisory GHSA-8r9q-7v3j-jr4g

Also includes refreshed spec content from upstream sources.