@@ -1,5 +1,541 @@
-# Java Formatters
+GitHub - google/google-java-format: Reformats Java source code to comply with Google Java Style.[Skip to content](#start-of-content)
 
-## google-java-format
+## Navigation Menu
 
-See: https://github.com/google/google-java-format
+Toggle navigation/[Sign in](/login?return_to=https%3A%2F%2Fgithub.com%2Fgoogle%2Fgoogle-java-format)Appearance settings
+
+- Platform
+
+  - AI CODE CREATION
+
+    - [GitHub CopilotWrite better code with AI](https://github.com/features/copilot)
+    - [GitHub SparkBuild and deploy intelligent apps](https://github.com/features/spark)
+    - [GitHub ModelsManage and compare prompts](https://github.com/features/models)
+    - [MCP RegistryNewIntegrate external tools](https://github.com/mcp)
+
+  - DEVELOPER WORKFLOWS
+
+    - [ActionsAutomate any workflow](https://github.com/features/actions)
+    - [CodespacesInstant dev environments](https://github.com/features/codespaces)
+    - [IssuesPlan and track work](https://github.com/features/issues)
+    - [Code ReviewManage code changes](https://github.com/features/code-review)
+
+  - APPLICATION SECURITY
+
+    - [GitHub Advanced SecurityFind and fix vulnerabilities](https://github.com/security/advanced-security)
+    - [Code securitySecure your code as you build](https://github.com/security/advanced-security/code-security)
+    - [Secret protectionStop leaks before they start](https://github.com/security/advanced-security/secret-protection)
+
+  - EXPLORE
+
+    - [Why GitHub](https://github.com/why-github)
+    - [Documentation](https://docs.github.com)
+    - [Blog](https://github.blog)
+    - [Changelog](https://github.blog/changelog)
+    - [Marketplace](https://github.com/marketplace)
+
+[View all features](https://github.com/features)
+- Solutions
+
+  - BY COMPANY SIZE
+
+    - [Enterprises](https://github.com/enterprise)
+    - [Small and medium teams](https://github.com/team)
+    - [Startups](https://github.com/enterprise/startups)
+    - [Nonprofits](https://github.com/solutions/industry/nonprofits)
+
+  - BY USE CASE
+
+    - [App Modernization](https://github.com/solutions/use-case/app-modernization)
+    - [DevSecOps](https://github.com/solutions/use-case/devsecops)
+    - [DevOps](https://github.com/solutions/use-case/devops)
+    - [CI/CD](https://github.com/solutions/use-case/ci-cd)
+    - [View all use cases](https://github.com/solutions/use-case)
+
+  - BY INDUSTRY
+
+    - [Healthcare](https://github.com/solutions/industry/healthcare)
+    - [Financial services](https://github.com/solutions/industry/financial-services)
+    - [Manufacturing](https://github.com/solutions/industry/manufacturing)
+    - [Government](https://github.com/solutions/industry/government)
+    - [View all industries](https://github.com/solutions/industry)
+
+[View all solutions](https://github.com/solutions)
+- Resources
+
+  - EXPLORE BY TOPIC
+
+    - [AI](https://github.com/resources/articles?topic=ai)
+    - [Software Development](https://github.com/resources/articles?topic=software-development)
+    - [DevOps](https://github.com/resources/articles?topic=devops)
+    - [Security](https://github.com/resources/articles?topic=security)
+    - [View all topics](https://github.com/resources/articles)
+
+  - EXPLORE BY TYPE
+
+    - [Customer stories](https://github.com/customer-stories)
+    - [Events & webinars](https://github.com/resources/events)
+    - [Ebooks & reports](https://github.com/resources/whitepapers)
+    - [Business insights](https://github.com/solutions/executive-insights)
+    - [GitHub Skills](https://skills.github.com)
+
+  - SUPPORT & SERVICES
+
+    - [Documentation](https://docs.github.com)
+    - [Customer support](https://support.github.com)
+    - [Community forum](https://github.com/orgs/community/discussions)
+    - [Trust center](https://github.com/trust-center)
+    - [Partners](https://github.com/partners)
+
+- Open Source
+
+  - COMMUNITY
+
+    - [GitHub SponsorsFund open source developers](https://github.com/sponsors)
+
+  - PROGRAMS
+
+    - [Security Lab](https://securitylab.github.com)
+    - [Maintainer Community](https://maintainers.github.com)
+    - [Accelerator](https://github.com/accelerator)
+    - [Archive Program](https://archiveprogram.github.com)
+
+  - REPOSITORIES
+
+    - [Topics](https://github.com/topics)
+    - [Trending](https://github.com/trending)
+    - [Collections](https://github.com/collections)
+
+- Enterprise
+
+  - ENTERPRISE SOLUTIONS
+
+    - [Enterprise platformAI-powered developer platform](https://github.com/enterprise)
+
+  - AVAILABLE ADD-ONS
+
+    - [GitHub Advanced SecurityEnterprise-grade security features](https://github.com/security/advanced-security)
+    - [Copilot for BusinessEnterprise-grade AI features](https://github.com/features/copilot/copilot-business)
+    - [Premium SupportEnterprise-grade 24/7 support](https://github.com/premium-support)
+
+- [Pricing](https://github.com/pricing)
+
+Search or jump to...
+
+# Search code, repositories, users, issues, pull requests...
+
+ Search Clear
+
+[Search syntax tips](https://docs.github.com/search-github/github-code-search/understanding-github-code-search-syntax)
+
+#  Provide feedback 
+
+We read every piece of feedback, and take your input very seriously.
+
+Include my email address so I can be contacted Cancel  Submit feedback 
+
+#  Saved searches 
+
+## Use saved searches to filter your results more quickly
+
+NameQuery
+
+ To see all available qualifiers, see our [documentation](https://docs.github.com/search-github/github-code-search/understanding-github-code-search-syntax). 
+
+ Cancel  Create saved search [Sign in](/login?return_to=https%3A%2F%2Fgithub.com%2Fgoogle%2Fgoogle-java-format)[Sign up](/signup?ref_cta=Sign+up&ref_loc=header+logged+out&ref_page=%2F%3Cuser-name%3E%2F%3Crepo-name%3E&source=header-repo&source_repo=google%2Fgoogle-java-format)Appearance settingsResetting focusYou signed in with another tab or window. Reload to refresh your session.You signed out in another tab or window. Reload to refresh your session.You switched accounts on another tab or window. Reload to refresh your session.Dismiss alert{{ message }}[google](/google)/[google-java-format](/google/google-java-format)Public
+
+- [Notifications](/login?return_to=%2Fgoogle%2Fgoogle-java-format)You must be signed in to change notification settings
+- [Fork
+    905](/login?return_to=%2Fgoogle%2Fgoogle-java-format)
+- [Star
+          6k](/login?return_to=%2Fgoogle%2Fgoogle-java-format)
+
+ Reformats Java source code to comply with Google Java Style. 
+
+### License
+
+[View license](/google/google-java-format/blob/master/LICENSE)[6k
+          stars](/google/google-java-format/stargazers)[905
+          forks](/google/google-java-format/forks)[Branches](/google/google-java-format/branches)[Tags](/google/google-java-format/tags)[Activity](/google/google-java-format/activity)[Star](/login?return_to=%2Fgoogle%2Fgoogle-java-format)[Notifications](/login?return_to=%2Fgoogle%2Fgoogle-java-format)You must be signed in to change notification settings
+
+- [Code](/google/google-java-format)
+- [Issues
+          136](/google/google-java-format/issues)
+- [Pull requests
+          30](/google/google-java-format/pulls)
+- [Actions](/google/google-java-format/actions)
+- [Projects
+          0](/google/google-java-format/projects)
+- [Wiki](/google/google-java-format/wiki)
+- 
+
+### 
+
+[Security
+          
+  
+  
+    
+  
+    
+      
+
+              Uh oh!
+
+              There was an error while loading. Please reload this page](/google/google-java-format/security).
+
+- [Insights](/google/google-java-format/pulse)
+
+Additional navigation options
+
+- [Code](/google/google-java-format)
+- [Issues](/google/google-java-format/issues)
+- [Pull requests](/google/google-java-format/pulls)
+- [Actions](/google/google-java-format/actions)
+- [Projects](/google/google-java-format/projects)
+- [Wiki](/google/google-java-format/wiki)
+- [Security](/google/google-java-format/security)
+- [Insights](/google/google-java-format/pulse)
+
+# google/google-java-format
+
+master[Branches](/google/google-java-format/branches)[Tags](/google/google-java-format/tags)/google/google-java-format/branches/google/google-java-format/tagsGo to fileCodeOpen more actions menu
+
+## Folders and files
+
+NameNameLast commit messageLast commit date
+
+## Latest commit
+
+## History
+
+[881 Commits](/google/google-java-format/commits/master/)/google/google-java-format/commits/master/[.github/workflows](/google/google-java-format/tree/master/.github/workflows)[.github/workflows](/google/google-java-format/tree/master/.github/workflows)[.mvn](/google/google-java-format/tree/master/.mvn)[.mvn](/google/google-java-format/tree/master/.mvn)[core](/google/google-java-format/tree/master/core)[core](/google/google-java-format/tree/master/core)[eclipse_plugin](/google/google-java-format/tree/master/eclipse_plugin)[eclipse_plugin](/google/google-java-format/tree/master/eclipse_plugin)[idea_plugin](/google/google-java-format/tree/master/idea_plugin)[idea_plugin](/google/google-java-format/tree/master/idea_plugin)[scripts](/google/google-java-format/tree/master/scripts)[scripts](/google/google-java-format/tree/master/scripts)[util](/google/google-java-format/tree/master/util)[util](/google/google-java-format/tree/master/util)[.gitignore](/google/google-java-format/blob/master/.gitignore)[.gitignore](/google/google-java-format/blob/master/.gitignore)[CONTRIBUTING.md](/google/google-java-format/blob/master/CONTRIBUTING.md)[CONTRIBUTING.md](/google/google-java-format/blob/master/CONTRIBUTING.md)[LICENSE](/google/google-java-format/blob/master/LICENSE)[LICENSE](/google/google-java-format/blob/master/LICENSE)[README.md](/google/google-java-format/blob/master/README.md)[README.md](/google/google-java-format/blob/master/README.md)[pom.xml](/google/google-java-format/blob/master/pom.xml)[pom.xml](/google/google-java-format/blob/master/pom.xml)View all files
+
+## Repository files navigation
+
+- [README](#)
+- [Code of conduct](#)
+- [Contributing](#)
+- [License](#)
+- [Security](#)
+
+# google-java-format
+
+#google-java-format
+
+`google-java-format` is a program that reformats Java source code to comply with [Google Java Style](https://google.github.io/styleguide/javaguide.html).
+
+## Using the formatter
+
+#using-the-formatter
+
+### From the command-line
+
+#from-the-command-line
+
+[Download the formatter](https://github.com/google/google-java-format/releases) and run it with:
+
+```
+java -jar /path/to/google-java-format-${GJF_VERSION?}-all-deps.jar <options> [files...]
+```
+
+Note that it uses the `jdk.compiler` module to parse the Java source code. The `java` binary version used must therefore be from a JDK (not JRE) with a version equal to or newer than the Java language version of the files being formatted. The minimum Java version can be found in `core/pom.xml` (currently Java 17). An alternative is to use the available GraalVM based native binaries instead.
+
+The formatter can act on whole files, on limited lines (`--lines`), on specific offsets (`--offset`), passing through to standard-out (default) or altered in-place (`--replace`).
+
+Option `--help` will print full usage details; including built-in documentation about other flags, such as `--aosp`, `--fix-imports-only`, `--skip-sorting-imports`, `--skip-removing-unused-import`, `--skip-reflowing-long-strings`, `--skip-javadoc-formatting`, or the `--dry-run` and `--set-exit-if-changed`.
+
+Using `@<filename>` reads options and filenames from a file, instead of arguments.
+
+To reformat changed lines in a specific patch, use [google-java-format-diff.py](https://github.com/google/google-java-format/blob/master/scripts/google-java-format-diff.py).
+
+Note:There is no configurability as to the formatter's algorithm for formatting. This is a deliberate design decision to unify our code formatting on a single format.
+
+### IntelliJ, Android Studio, and other JetBrains IDEs
+
+#intellij-android-studio-and-other-jetbrains-ides
+
+A [google-java-format IntelliJ plugin](https://plugins.jetbrains.com/plugin/8527) is available from the plugin repository. To install it, go to your IDE's settings and select the `Plugins` category. Click the `Marketplace` tab, search for the `google-java-format` plugin, and click the `Install` button.
+
+The plugin will be disabled by default. To enable, [open the Project settings](https://www.jetbrains.com/help/idea/configure-project-settings.html), then click "google-java-format Settings" and check the "Enable google-java-format" checkbox.
+
+To enable it by default in new projects, [open the default settings for new projects](https://www.jetbrains.com/help/idea/configure-project-settings.html#new-default-settings) and configure it under "Other Settings/google-java-format Settings".
+
+When enabled, it will replace the normal `Reformat Code` and `Optimize Imports` actions.
+
+#### IntelliJ JRE Config
+
+#intellij-jre-config
+
+The google-java-format plugin uses some internal classes that aren't available without extra configuration. To use the plugin, you need to [add some options to your IDE's Java runtime](https://www.jetbrains.com/help/idea/tuning-the-ide.html#procedure-jvm-options). To do that, go to `Help→Edit Custom VM Options...` and paste in these lines:
+
+```
+--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+```
+
+Once you've done that, restart the IDE.
+
+### Eclipse
+
+#eclipse
+
+The latest version of the `google-java-format` Eclipse plugin can be downloaded from the [releases page](https://github.com/google/google-java-format/releases). Drop it into the Eclipse [drop-ins folder](http://help.eclipse.org/neon/index.jsp?topic=%2Forg.eclipse.platform.doc.isv%2Freference%2Fmisc%2Fp2_dropins_format.html) to activate the plugin.
+
+The plugin adds two formatter implementations:
+
+- `google-java-format`: using 2 spaces indent
+- `aosp-java-format`: using 4 spaces indent
+
+These that can be selected in "Window" > "Preferences" > "Java" > "Code Style" > "Formatter" > "Formatter Implementation".
+
+#### Eclipse JRE Config
+
+#eclipse-jre-config
+
+The plugin uses some internal classes that aren't available without extra configuration. To use the plugin, you will need to edit the [eclipse.ini](https://wiki.eclipse.org/Eclipse.ini) file.
+
+Open the `eclipse.ini` file in any editor and paste in these lines towards the end (but anywhere after `-vmargs` will do):
+
+```
+--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+```
+
+Once you've done that, restart the IDE.
+
+### Third-party integrations
+
+#third-party-integrations
+
+- Visual Studio Code 
+
+  - [google-java-format-for-vs-code](https://marketplace.visualstudio.com/items?itemName=JoseVSeb.google-java-format-for-vs-code)
+
+- Gradle plugins 
+
+  - [spotless](https://github.com/diffplug/spotless/tree/main/plugin-gradle#google-java-format)
+  - [sherter/google-java-format-gradle-plugin](https://github.com/sherter/google-java-format-gradle-plugin)
+
+- Apache Maven plugins 
+
+  - [spotless](https://github.com/diffplug/spotless/tree/main/plugin-maven#google-java-format)
+  - [spotify/fmt-maven-plugin](https://github.com/spotify/fmt-maven-plugin)
+  - [talios/googleformatter-maven-plugin](https://github.com/talios/googleformatter-maven-plugin)
+  - [Cosium/maven-git-code-format](https://github.com/Cosium/maven-git-code-format): A maven plugin that automatically deploys google-java-format as a pre-commit git hook.
+
+- SBT plugins 
+
+  - [sbt/sbt-java-formatter](https://github.com/sbt/sbt-java-formatter)
+
+- [Github Actions](https://github.com/features/actions)
+
+  - [googlejavaformat-action](https://github.com/axel-op/googlejavaformat-action): Automatically format your Java files when you push on github
+
+### as a library
+
+#as-a-library
+
+The formatter can be used in software which generates java to output more legible java code. Just include the library in your maven/gradle/etc. configuration.
+
+`google-java-format` uses internal javac APIs for parsing Java source. The following JVM flags are required when running on JDK 16 and newer, due to [JEP 396: Strongly Encapsulate JDK Internals by Default](https://openjdk.java.net/jeps/396):
+
+```
+--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+```
+
+#### Maven
+
+#maven
+
+```
+<dependency>
+  <groupId>com.google.googlejavaformat</groupId>
+  <artifactId>google-java-format</artifactId>
+  <version>${google-java-format.version}</version>
+</dependency>
+```
+
+#### Gradle
+
+#gradle
+
+```
+dependencies {
+  implementation 'com.google.googlejavaformat:google-java-format:$googleJavaFormatVersion'
+}
+```
+
+You can then use the formatter through the `formatSource` methods. E.g.
+
+```
+String formattedSource = new Formatter().formatSource(sourceString);
+```
+
+or
+
+```
+CharSource source = ...
+CharSink output = ...
+new Formatter().formatSource(source, output);
+```
+
+Your starting point should be the instance methods of `com.google.googlejavaformat.java.Formatter`.
+
+## Building from source
+
+#building-from-source
+
+```
+mvn install
+```
+
+## Contributing
+
+#contributing
+
+Please see [the contributors guide](/google/google-java-format/blob/master/CONTRIBUTING.md) for details.
+
+## License
+
+#license
+
+```
+Copyright 2015 Google Inc.
+
+Licensed under the Apache License, Version 2.0 (the "License"); you may not
+use this file except in compliance with the License. You may obtain a copy of
+the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+License for the specific language governing permissions and limitations under
+the License.
+```
+
+## About
+
+ Reformats Java source code to comply with Google Java Style. 
+
+### Topics
+
+[java](/topics/java)[formatter](/topics/formatter)
+
+### Resources
+
+[Readme](#readme-ov-file)
+
+### License
+
+[View license](#License-1-ov-file)
+
+### Code of conduct
+
+[Code of conduct](#coc-ov-file)
+
+### Contributing
+
+[Contributing](#contributing-ov-file)
+
+### Security policy
+
+[Security policy](#security-ov-file)
+
+###  Uh oh! 
+
+There was an error while loading. Please reload this page.
+
+[Activity](/google/google-java-format/activity)[Custom properties](/google/google-java-format/custom-properties)
+
+### Stars
+
+[6k
+        stars](/google/google-java-format/stargazers)
+
+### Watchers
+
+[132
+        watching](/google/google-java-format/watchers)
+
+### Forks
+
+[905
+        forks](/google/google-java-format/forks)[Report repository](/contact/report-content?content_url=https%3A%2F%2Fgithub.com%2Fgoogle%2Fgoogle-java-format&report=google+%28user%29)
+
+## [Releases
+      40](/google/google-java-format/releases)
+
+[v1.33.0
+        
+          Latest
+      
+      Dec 5, 2025](/google/google-java-format/releases/tag/v1.33.0)[+ 39 releases](/google/google-java-format/releases)
+
+## [Packages
+      0](/orgs/google/packages?repo_name=google-java-format)
+
+ No packages published 
+
+###  Uh oh! 
+
+There was an error while loading. Please reload this page.
+
+## [Contributors
+      93](/google/google-java-format/graphs/contributors)
+
+- https://github.com/cushon
+- https://github.com/plumpy
+- https://github.com/cpovirk
+- https://github.com/sormuras
+- https://github.com/java-team-github-bot
+- https://github.com/vorburger
+- https://github.com/apps/dependabot
+- https://github.com/eaftan
+- https://github.com/ronshapiro
+- https://github.com/eamonnmcmanus
+- https://github.com/perezd
+- https://github.com/kluever
+- https://github.com/nreid260
+- https://github.com/cgdecker
+
+[+ 79 contributors](/google/google-java-format/graphs/contributors)
+
+## Languages
+
+- [Java
+          98.0%](/google/google-java-format/search?l=java)
+- Other2.0%
+
+## Footer
+
+https://github.com © 2026 GitHub, Inc. 
+
+### Footer navigation
+
+- [Terms](https://docs.github.com/site-policy/github-terms/github-terms-of-service)
+- [Privacy](https://docs.github.com/site-policy/privacy-policies/github-privacy-statement)
+- [Security](https://github.com/security)
+- [Status](https://www.githubstatus.com/)
+- [Community](https://github.community/)
+- [Docs](https://docs.github.com/)
+- [Contact](https://support.github.com?tags=dotcom-footer)
+-  Manage cookies 
+-  Do not share my personal information 
+
+ You can’t perform that action at this time.
